# lozeebo_libretro

./: .gitignore  ANALYSIS_FINDINGS.md  BLOCKERS_ANALYSIS.md  BRIEFING_3_PESSOAS.md  BUILD_SUMMARY.sh  CMakeLists.txt  CMakePresets.json  COLLABORATION.md  DISTRIBUICAO_3_IAS.md  Directory.Build.props  FINAL_BUILD_REPORT.md  FIXES_TO_IMPLEMENT.md  GITHUB_SYNC_REPORT.md  IMPLEMENTATION_LOG.md  Makefile  PROMPT_PARA_3_PESSOAS.txt  PROMPT_RODADA_2_3IAS.md  PROMPT_RODADA_3_ONBOARDING.md  PROMPT_RODADA_5.md  PROMPT_RODADA_6.md  PROMPT_RODADA_7.md  PROMPT_UNICO_3_PESSOAS.md  QUICKSTART.sh  README.md  RENDERING_ANALYSIS.md  RODADA_5_CONSOLIDADO.md  STATUS_A_EVENTO_DOUBLE_DRAGON.md  STATUS_B_RENDER_FAMILYPACK.md  STATUS_C_BOOT_PACMANIA_ZEEBOIDS.md  STATUS_R5_A_SIGNALS.md  STATUS_R5_B_IDISPLAY.md  STATUS_R5_C_PACMANIA_DRAW.md  STATUS_R5_D_GLES_FP.md  STATUS_R5_E_INPUT.md  TESTS_MOD_ZIP.md  WORKFLOW_DESENVOLVIMENTO.md  WORK_COMPLETE.md  analyze_clsids.ps1  build_safe.ps1  quick_build.ps1  (+4 more)
Emulador/: 00_INDICE.md  01_ARQUITETURA_LIBRETRO.md  02_ARQUITETURA_ZEEBO.md  03_PLANO_DESENVOLVIMENTO.md  04_EMULACAO_CPU_DETALHADA.md  05_EMULACAO_APIS_BREW.md  06_TOOLCHAIN_SETUP.md  07_ESTRUTURA_PASTA.md  08_TESTES_ESTRATEGIA.md  09_MAPEAMENTO_MEMORIAS.md  10_INSTRUCOES_ARM.md  11_MULTIPLATAFORMA_BUILD.md
Emulador/.space/: context.mdb
Emulador/n1/: 11_PROTOTIPO_SKELETON.md  12_CHECKLIST_SEMANA1.md  13_GLOSSARIO_TECNICO.md
docs/: ARM_NOTES.md  ASSET_REUSE_AUDIT.md  AUDIT_STATUS.md  BREW_NOTES.md  BUILD_AVANCADO_RESUMO.md  COMPILACAO_AVANCADA.md  CONCLUSAO.md  FINAL_REPORT.md  GITHUB_PUSH.md  NOTES.md  PLANNING_ARCHIVE.md  PORTABILITY.md  PROGRESS.md  ROADMAP_50_IDEIAS.md  SKELETON_CHECKLIST.md  SKELETON_RESUMO.md  TESTE_AVANCADO.md  TESTE_RETROARCH.md  TESTING.md  THIRD_PARTY.md  status_report.ps1  status_report.py
ggzbrewtools-main/: LICENSE
infuse_zeebo_emulator/: .CRT  .data  .idata  .pdata  .rdata  .reloc  .xdata  LICENSE  README.md
infuse_zeebo_emulator/.rsrc/: version.txt
infuse_zeebo_emulator/.rsrc/GROUP_ICON/: 100
infuse_zeebo_emulator/.rsrc/ICON/: 1
infuse_zeebo_emulator/brew/font/: OFL.txt
reference/openzeebo-master/openzeebo-master/brew/intro/: Makefile  intro.bid  intro.brh  intro.brx  intro.c
reference/zeebo_doom-main/src/: i_video.c  mathfixed.c  mathfixed.h  prboom.c  prboom.h
reference/zeemu-main/zeemu-main/: .gitignore  CMakeLists.txt  README.md  imgui.ini  main.cpp
reference/zeemu-main/zeemu-main/brew/: Brew3D.cpp  Brew3D.h  Brew3DCommon.h  Brew3DModel.cpp  Brew3DUtil.cpp  BrewAEEHelpers.cpp  BrewAppHistory.cpp  BrewAppHistory.h  BrewAppUI.cpp  BrewAppUI.h  BrewApplet.cpp  BrewApplet.h  BrewAppletCtl.cpp  BrewAppletCtl.h  BrewAudio.cpp  BrewAudio.h  BrewBitmap.cpp  BrewBitmap.h  BrewBitmapBlit.cpp  BrewBitmapColor.cpp  BrewBitmapInfo.cpp  BrewBitmapPixels.cpp  BrewBitmapTransform.cpp  BrewCipher.cpp  BrewCipher.h  BrewDatabase.cpp  BrewDatabase.h  BrewDisplay.cpp  BrewDisplay.h  BrewEGL.cpp  BrewFileMgr.cpp  BrewFileMgr.h  BrewFlash.cpp  BrewFlash.h  BrewFont.cpp  BrewFont.h  BrewGL.cpp  BrewGraphics.cpp  BrewGraphics.h  BrewHID.cpp  (+54 more)
reference/zeemu-main/zeemu-main/cpu/: cpu.h
reference/zeemu-main/zeemu-main/cpu/arm7tdmi/: algorithms.cpp  arm7tdmi.cpp  arm7tdmi.hpp  disassembler.cpp  instruction.cpp  instructions-arm.cpp  instructions-thumb.cpp  memory.cpp  serialization.cpp
reference/zeemu-main/zeemu-main/cpu/arm7tdmi/emulator/: emulator.hpp
reference/zeemu-main/zeemu-main/cpu/core/: CPU.cpp  CPU.h
reference/zeemu-main/zeemu-main/cpu/disassembler/: Disassembler.cpp  Disassembler.h
reference/zeemu-main/zeemu-main/cpu/memory/: CollectionMemory.h  DecoratorMemory.cpp  DecoratorMemory.h  EndianMemory.cpp  EndianMemory.h  Memory.h  PagedMemory.h  StreamMemory.h  VirtualMemory.cpp  VirtualMemory.h
reference/zeemu-main/zeemu-main/cpu/platform/: Time.cpp  Time.h  pstdint.h
reference/zeemu-main/zeemu-main/font/: README.txt
reference/zeemu-main/zeemu-main/frontend/: Launcher.cpp  Launcher.h
reference/zeemu-main/zeemu-main/graphics/: RenderBackend.cpp  RenderBackend.h
reference/zeemu-main/zeemu-main/loaders/: ELFLoader.h  ExecutableLoader.h  PELoader.cpp  PELoader.h
reference/zeemu-main/zeemu-main/rootfs/: README.md
reference/zeemu-main/zeemu-main/rootfs/sys/: hid_devices.cfg
reference/zeemu-main/zeemu-main/runtime/: AEEHelperTable.cpp  AEEHelperTable.h  AppRunner.cpp  AppRunner.h  CliCommands.cpp  CliCommands.h  GuestCallRunner.cpp  GuestCallRunner.h
reference/zeemu-main/zeemu-main/tools/app_inspector/: AppPackageInspector.cpp  AppPackageInspector.h
reference/zeemu-main/zeemu-main/tools/firmware_inspector/: FirmwareInspector.cpp  FirmwareInspector.h  SplitFirmwareInspector.cpp  SplitFirmwareInspector.h
reference/zeemu-main/zeemu-main/tools/misc/: bar_tool.py  check_quake_pe.py  decode_arm.c  gen_tranmap.c  pack_tool.py  zwheel_catalog.py
reference/zeemu-main/zeemu-main/util/: Compression.cpp  Compression.h
reference/zeemu-main/zeemu-main/vfs/: VirtualFileSystem.cpp  VirtualFileSystem.h
src/audio/: audio.c  audio.h  audio_internal.h  mixer.c  pcm.c
src/brew/: aee_ids.h  boot.c  brew.c  brew.h  helpers.c  ibitmap.c  idisplay.c  idisplay_real.c  ifile.c  imemory.c  ishell.c  isound.c
src/core/: libretro_core.c  libretro_core.h
src/cpu/: cpu.c  cpu.h  decode.c  decode.h  execute_arm.c  execute_thumb.c  flags.c
src/debug/: disasm.c  log.c  log.h  trace.c
src/gpu/: draw.c  egl_gl.c  egl_gl.h  framebuffer.c  framebuffer.h
src/input/: input.c  input.h
src/loader/: bar_parser.c  mif_parser.c  mod_loader.c  mod_loader.h
src/memory/: heap.c  memory.c  memory.h
tests/: libretro_smoke.c  test_cpu.c  test_gles_transform.c  test_memory.c
tests/roms/: .gitkeep  README.md  make_test_rom.py  real_ddragon_game.mod  real_pacmania_game.mod  real_zeeboids_game.mod  test_draw.mod
tests/roms/real/Double_Dragon/mif/: 274754.mif
tests/roms/real/Pac-Mania/mif/: 276212.mif
tests/roms/real/Zeeboids/mif/: 279382.mif
zeebo_libretro/: core.c  zeebo_libretro.vcxproj  zeebo_libretro.vcxproj.filters
zeebo_libretro/include/: libretro.h
(+12 files in other folders)
